# Glint-Demo

./: README.md  data.json  index.html  result.txt  test.ipynb
.archive/: README.md  pyproject.toml
.archive/outputs/profiles/: alice.json  brian.json  cara.json
.archive/outputs/reports/: match_report.json
.archive/sample_data/transcripts/: alice.json  brian.json  cara.json
.archive/src/glint_harness/: __init__.py  cli.py  intake.py  llm.py  matching.py  models.py  normalize.py  pipeline.py  storage.py
.archive/tests/: test_matching.py  test_normalize.py  test_pipeline.py
assets/: index-BWFenozx.js  index-BfOvwRAI.css  index-ti5DYbz4.js
glint-site/: index.html  package-lock.json  package.json  vite.config.js
glint-site/src/: App.css  App.jsx  index.css
glint-site/src/data/: pillarsDefinition.js  prompts.js
